substrate/.cxx/ndkBuild/debug/armeabi-v7a/android_gradle_build_substrate_armeabi-v7a.stderr.txt
E:/AppProjects/ModdedPE/substrate/src/main/cpp/substrate/Hooker.cpp:105:100: warning: '&&' within '||' [-Wlogical-op-parentheses]
    return (ic[0] & 0xf800) == 0xf000 && ((ic[1] & 0xd000) == 0x9000 || (ic[1] & 0xd000) == 0x8000 && (ic[0] & 0x0380) != 0x0380);
                                                                     ~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
E:/AppProjects/ModdedPE/substrate/src/main/cpp/substrate/Hooker.cpp:105:100: note: place parentheses around the '&&' expression to silence this warning
    return (ic[0] & 0xf800) == 0xf000 && ((ic[1] & 0xd000) == 0x9000 || (ic[1] & 0xd000) == 0x8000 && (ic[0] & 0x0380) != 0x0380);
                                                                                                   ^
                                                                        (                                                       )
E:/AppProjects/ModdedPE/substrate/src/main/cpp/substrate/Hooker.cpp:458:31: error: call to 'abs' is ambiguous
            buffer[start+1] = T2$ldr_rt_$rn_im$(exts.rt, A$pc, T$Label(start+0, end-2));
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
E:/AppProjects/ModdedPE/substrate/src/main/cpp/substrate/Hooker.cpp:74:21: note: expanded from macro 'T2$ldr_rt_$rn_im$'
    (((rt) << 12) | abs(im))
                    ^~~
E:/Android/Sdk/ndk/21.0.6113669/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include\android/legacy_stdlib_inlines.h:38:21: note: candidate function
static __inline int abs(int __n) { return (__n < 0) ? -__n : __n; }
                    ^
E:/Android/Sdk/ndk/21.0.6113669/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\math.h:768:39: note: candidate function
inline _LIBCPP_INLINE_VISIBILITY long abs(long __x) _NOEXCEPT {
                                      ^
E:/Android/Sdk/ndk/21.0.6113669/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\math.h:772:44: note: candidate function
inline _LIBCPP_INLINE_VISIBILITY long long abs(long long __x) _NOEXCEPT {
                                           ^
E:/Android/Sdk/ndk/21.0.6113669/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\math.h:780:40: note: candidate function
inline _LIBCPP_INLINE_VISIBILITY float abs(float __lcpp_x) _NOEXCEPT {
                                       ^
E:/Android/Sdk/ndk/21.0.6113669/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\math.h:784:41: note: candidate function
inline _LIBCPP_INLINE_VISIBILITY double abs(double __lcpp_x) _NOEXCEPT {
                                        ^
E:/Android/Sdk/ndk/21.0.6113669/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\math.h:789:1: note: candidate function
abs(long double __lcpp_x) _NOEXCEPT {
^
E:/AppProjects/ModdedPE/substrate/src/main/cpp/substrate/Hooker.cpp:645:31: error: call to 'abs' is ambiguous
            buffer[start+0] = A$ldr_rd_$rn_im$(copy.rn, A$pc, (end-1 - (start+0)) * 4 - 8);
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
E:/AppProjects/ModdedPE/substrate/src/main/cpp/substrate/ARM.hpp:28:76: note: expanded from macro 'A$ldr_rd_$rn_im$'
    (0xe5100000 | ((im) < 0 ? 0 : 1 << 23) | ((rn) << 16) | ((rd) << 12) | abs(im))
                                                                           ^~~
E:/Android/Sdk/ndk/21.0.6113669/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include\android/legacy_stdlib_inlines.h:38:21: note: candidate function
static __inline int abs(int __n) { return (__n < 0) ? -__n : __n; }
                    ^
E:/Android/Sdk/ndk/21.0.6113669/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\math.h:768:39: note: candidate function
inline _LIBCPP_INLINE_VISIBILITY long abs(long __x) _NOEXCEPT {
                                      ^
E:/Android/Sdk/ndk/21.0.6113669/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\math.h:772:44: note: candidate function
inline _LIBCPP_INLINE_VISIBILITY long long abs(long long __x) _NOEXCEPT {
                                           ^
E:/Android/Sdk/ndk/21.0.6113669/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\math.h:780:40: note: candidate function
inline _LIBCPP_INLINE_VISIBILITY float abs(float __lcpp_x) _NOEXCEPT {
                                       ^
E:/Android/Sdk/ndk/21.0.6113669/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\math.h:784:41: note: candidate function
inline _LIBCPP_INLINE_VISIBILITY double abs(double __lcpp_x) _NOEXCEPT {
                                        ^
E:/Android/Sdk/ndk/21.0.6113669/build//../toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/c++/v1\math.h:789:1: note: candidate function
abs(long double __lcpp_x) _NOEXCEPT {
^
1 warning and 2 errors generated.
make: *** [E:/Android/Sdk/ndk/21.0.6113669/build//../build/core/build-binary.mk:478: E:/AppProjects/ModdedPE/substrate/build/intermediates/ndkBuild/debug/obj/local/armeabi-v7a/objs-debug/substrate/substrate/Hooker.o] Error 1
